--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
             bottom: 0;
             width: 100%;
         }
+        #form {
+          position: absolute;
+          bottom:10px;
+          left:10px;
+          z-index:100;
+          background:white;
+          color:black;
+          padding:6px;
+          border-radius:4px;
+          border: 1px solid #AAA;
+        }
+
         #delete, #add, #export {
             position: absolute;
             top:50px;
@@ -62,6 +74,13 @@
 <body>
 
     <div id='map'></div>
+
+    <div id="form">
+      <input id="myForm" type="text" value="Add coordinates here">
+      <button id="zoomButton" onclick="zoom2latLng();">Zoom to Coords</button>
+      <button id="mapButton" onclick="back2map();">Full Map</button>
+    </div>
+
     <div id='delete'>Delete Your Features</div>
     <a href='#' id='add'>Add & Export Your Features</a>
     <a href='#' id='export'>Export All Features</a>
@@ -101,6 +120,25 @@
             'Giuseppe Grande': ancientOver
         }).addTo(map);
 
+        function zoom2latLng() {
+
+          // get input
+          const inputLatLng = document.getElementById('myForm').value;
+
+          const lat = parseFloat(inputLatLng.split(',')[0]);
+          const long = parseFloat(inputLatLng.split(',')[1]);
+
+          // declare leaflet latlng
+          const latlng = L.latLng(lat, long);  // ie. 50.5, 30.5
+
+          map.setView(L.latLng(lat,long), 17);  // you can specify pan/zoom options as well
+        };
+
+        function back2map() {
+
+          map.setView([41.893333, 12.482778], 14);
+          
+        }
 
         // THE FOLLOWING CODE BRINGS GOOGLE SHEET DATA INTO THE MAP
         // Define variables for later use.
